Исправления после код-ревью

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
       <h1 class="header__title">Научиться учиться</h1>
 
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a class="header__subtitle_link" href='#'>Узнать &rarr;</a></p>
+        жизни? <a class="header__link" href='#'>Узнать &rarr;</a></p>
 
+      <img src="./images/header-image.png" alt="Основное изображение" class="header__main-illustration">
 
-      <div class="header__main-illustration">
-        <img src="./images/header-image.png" alt="main-illustration" class="header__main-illustration">
-      </div>
       <div class="header__square-pic"></div>
     </header>
 
@@ -33,9 +31,7 @@
       <section class="description">
         <div class="two-columns">
 
-          <div class="two-columns__brief">
-            <h3 class="two-columns__brief_title">Главные проблемы в обучении</h3>
-          </div>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
 
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
@@ -43,7 +39,7 @@
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               дает
               нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph"><span class="two-columns__paragraph_span-accent">Вывод:</span> учиться
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться
               тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и
@@ -55,104 +51,105 @@
 
       <section class="digits">
 
-        <h2 class="section__title">Цифры и факты</h2>
-        <h2 class="section__subtitle">Про учёбу и мозг</h2>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
 
-        <ul class="section__table">
+        <ul class="table">
           <li class="table__cell">
-            <h3 class="table__cell_heading">85 миллиардов</h3>
-            <p class="table__cell_text">Число нейронов в мозге человека</p>
+            <h3 class="table__heading">85 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__cell_heading">2.1 миллиарда</h3>
-            <p class="table__cell_text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__cell_text_source">Всемирный Банк, 2017</p>
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__cell_heading">1000 терабайт</h3>
-            <p class="table__cell_text">Объем памяти человека</p>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объем памяти человека</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__cell_heading">500 триллионов</h3>
-            <p class="table__cell_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__cell_heading">420 миллионов</h3>
-            <p class="table__cell_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
             </p>
-            <p class="table__cell_text_source">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__cell_heading">17-20 лет</h3>
-            <p class="table__cell_text">Пик обучаемости</p>
+            <h3 class="table__heading">17-20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__cell_heading">1885 год</h3>
-            <p class="table__cell_text">Открытие кривой забывания</p>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <h3 class="table__cell_heading">1889 год</h3>
-            <p class="table__cell_text">Открытие условного рефлекса</p>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
 
       </section>
 
       <section class="feinman">
-        <h1 class="feinman__title">Метод Фейнмана</h1>
+        <h2 class="feinman__title">Метод Фейнмана</h2>
         <p class="feinman__subtitle">Выучить и не забыть.</p>
-        <div class="feinman__image"><img src="./images/feynman.png" alt="feynman" class="feinman__image_position"></div>
-        <div class="feinman__link"><a class='feinman__link_items' href=#>Подробнее &rarr;</a> </div>
+        <img src="./images/feynman.png" alt="Фейнман" class="feinman__image">
+        <a class='feinman__link' href=#>Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
-        <h2 class="section__title table__text_them_dark">Принципы обучения</h2>
-        <h2 class="section__subtitle table__text_them_dark">от Джоша Кауфмана</h2>
+        <h2 class="section-title table__title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle table__subtitle_theme_dark">от Джоша Кауфмана</p>
 
-        <ul class="section__table table__text_them_dark">
+        <ul class="table table__theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__cell_heading">1</h2>
-            <p class="table__cell_text">Выберите привлекательный проект.</p>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">2</h3>
-            <p class="table__cell_text">Сосредоточьтесь на каком-то одном навыке.</p>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">3</h3>
-            <p class="table__cell_text">Определите целевой уровень сатерства.</p>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень сатерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">4</h3>
-            <p class="table__cell_text">Разбейте навык на элементы.</p>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">5</h3>
-            <p class="table__cell_text">Приготовьте всё необходимое для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">6</h3>
-            <p class="table__cell_text">Устраните препятствия для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">7</h3>
-            <p class="table__cell_text">Выделите специальное время для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">8</h3>
-            <p class="table__cell_text">Создайте быстрые петли обратной связи.</p>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">9</h3>
-            <p class="table__cell_text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__cell_heading">10</h3>
-            <p class="table__cell_text">Уделяйте внимание количеству и скорости.</p>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
 
-        <div class="kaufman__image"></div>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
@@ -160,34 +157,37 @@
 
       <div class="footer__columns">
 
-        <div class="footer__columns_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author table__text_them_dark">&copy; 2020. Ильина Елена</p>
+          <p class="footer__author">&copy; 2020. Ильина Елена</p>
         </div>
 
+        <nav class="footer__column footer__column_content_info">
+          <p class="footer__column-heading">О Практикуме</p>
 
-        <div class="footer__columns_content_info">
-          <p class="footer__columns_heading table__text_them_dark">О Практикуме</p>
+          <ul class="footer__column-links">
+            <li class="footer__link"><a class="footer__link" href="#">Главная</a></li>
+            <li class="footer__link"><a class="footer__link" href="#">Концепция</a></li>
+            <li class="footer__link"><a class="footer__link" href="#">Наставники</a></li>
+          </ul>
+        </nav>
 
-          <div class="footer__columns_links">
-            <a class="footer__columns_links_main table__text_them_dark" href="#">Главная</a>
-            <a class="footer__columns_links_concept table__text_them_dark" href="#">Концепция</a>
-            <a class="footer__columns_links_mentors table__text_them_dark" href="#">Наставники</a>
-          </div>
-        </div>
+        <div class="footer__column footer__column_content_social ">
+          <p class="footer__column-heading">Соцсети</p>
 
-
-        <div class="footer__columns_content_social ">
-          <p class="footer__columns_heading table__text_them_dark">Соцсети</p>
-
-          <div class="footer__columns_links">
-            <a class="footer__columns_links_facebook table__text_them_dark" href="#">
-              <img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__columns_icon">Facebook</a>
-            <a class="footer__columns_links_vk table__text_them_dark" href="#">
-              <img src="./images/vk_color_white.svg" alt="VK" class="footer__columns_icon">ВКонтакте</a>
-            <a class="footer__columns_links_instagram table__text_them_dark" href="#">
-              <img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__columns_icon">Instagram</a>
-          </div>
+          <ul class="footer__column-links">
+            <li class="footer__link"><a class="footer__link" href="#">
+                <img src="./images/facebook_color_white.svg" alt="Социальная сеть Facebook"
+                  class="footer__social-icon">Facebook</a>
+            </li>
+            <li class="footer__link"><a class="footer__link" href="#">
+                <img src="./images/vk_color_white.svg" alt="Социальная сеть Вконтакте"
+                  class="footer__social-icon">ВКонтакте</a></li>
+            <li class="footer__link"><a class="footer__link" href="#">
+                <img src="./images/instagram_color_white.svg" alt="Социальная сеть Instagram"
+                  class="footer__social-icon">Instagram</a>
+            </li>
+          </ul>
 
         </div>
       </div>
