Исправление ссылки в блоке Хан.

--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
-        <div class="resources__logo-zone">
-          <a href="#"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="Арзамас"></a>
-          <a href="#"><img class="resources__logo" src="./images/resources-n1.svg" alt="Н1"></a>
-          <a href="#"><img class="resources__logo" src="./images/resources-strelka.svg" alt="Стрелка"></a>
-          <a href="#"><img class="resources__logo" src="./images/resources-polka.svg" alt="Полка"></a>
-        </div>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="Арзамас"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="./images/resources-n1.svg" alt="Н1"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="./images/resources-strelka.svg" alt="Стрелка"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="./images/resources-polka.svg" alt="Полка"></a></li>
+        </ul>
 
       </section>
     </main>
